# cri-platform

./: .env.example  .gitignore  CRI_Platform_Infrastructure_Gap_Report.md  CRI_Platform_Master_Infrastructure_Checklist_v2.md  CRI_Runtime_Final_Master_Plan.md  CRI_Runtime_Master_Checklist.md  DOCUMENTATION.md  README.md  check.md  kafka-topics.json  main.py  pyproject.toml
cri/: __init__.py
cri/agent-runtime/: client.py  cognition_os.py  governance.py  memory.py
cri/belief-engine/: extractor.py  parser.py  store.py
cri/benchmark/: harness.py  tasks.json
cri/checkpoint-engine/: dag.py
cri/dashboard/: app.py  index.html
cri/event-schema/: event_schema.json
cri/grpc_runtime/: interrupt.proto  interrupt_pb2.py  interrupt_pb2_grpc.py  server.py
cri/infra/: docker-compose.yml
cri/java-ingestion/: .classpath  .project  pom.xml
cri/observability/: otel.py
cri/rollback-engine/: coordinator.py
cri/runtime-core/: classifiers.py  interceptor.py  sandbox.py
cri/semantic-state/: state.py
cri/verification-runtime/: app.py  nli.py
cri_runtime/: __init__.py  adapters.py  api.py  classifiers.py  cognition_os.py  config.py  events.py  governance.py  interception.py  io.py  kafka.py  kubernetes.py  monitoring.py  multi_agent.py  plugins.py  policy.py  rollback.py  runtime.py  sandbox.py  service.py  state.py  storage.py  telemetry.py  topics.py  verification.py
deployment/: docker-compose.yml  prometheus.yml
grafana/dashboards/: cri-runtime-dashboard.json
k8s/: configmap.yaml  namespace.yaml  networkpolicy.yaml  resourcequota.yaml  role.yaml  runtime-job.yaml  serviceaccount.yaml
modules/architecture/: generator.py
modules/intent/: extractor.py
orchestrator/: compiler.py
otel-collector/: config.yaml
prometheus/: alerts.yml  prometheus.yml
static/: app.js  index.html  styles.css
tests/: test_api.py  test_cli.py  test_compiler.py  test_cri_components.py  test_cri_platform.py
(+28 files in other folders)
