[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cri-runtime"
version = "0.1.0"
description = "CRI Runtime Phase 1 MVP scaffold"
requires-python = ">=3.11"
authors = [{ name = "PARTH" }]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.scripts]
cri-runtime = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["cri_runtime*"]
